Fixed navbar bug on iOS.

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ nav {
     }
 }
 
-@media screen and (max-width:820px) {
+@media screen and (max-width:850px) {
     .wrapper {
         overflow-x: hidden;
         position: absolute;
@@ -76,7 +76,7 @@ nav {
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 50%;
+        width: 40%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
     }
